fix: font size on mobile

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -218,4 +218,8 @@
   .searchBar {
     margin-top: 80px;
   }
+
+  .titleBox{
+    font-size: x-small;
+  }
 }
